Closed Bug 1702877 Opened 3 years ago Closed 3 years ago

Text fields and search fields no longer respect the Aqua override

Categories

(Core :: Widget: Cocoa, defect, P1)

All
macOS
defect

Tracking

()

VERIFIED FIXED
89 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox87 --- unaffected
firefox88 --- unaffected
firefox89 --- verified

People

(Reporter: mstange, Assigned: mstange)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [mac:darkmode][mac:mr1])

Attachments

(2 files)

Attached image screenshot

Steps to reproduce:

  1. Make sure widget.macos.respect-system-appearance is false. (This is currently the default.)
  2. Open the library window.
  3. Set macOS to Dark Mode.

Expected results:
The library window should be rendered in light mode, including text fields and the search field.

Actual results:
Text fields are rendered without a white background, and the search field's magnifying glass icon is white.

Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/6def0eee0cdc
Make text field and search field rendering respect the Aqua override. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch

Set release status flags based on info from the regressing bug 1702351

Flags: qe-verify+

Reproduced the issue with Firefox 89.0a1 (20210403214826) on macOS 11.3.1.
The issue is verified fixed with Firefox 89.0b10 on macOS 11.3.1. The search field's magnifying glass icon and text field can be seen.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: