Bug 1702877 - Make text field and search field rendering respect the Aqua override. r=emilio

Depends on D110762

Differential Revision: https://phabricator.services.mozilla.com/D110763