widget/cocoa/nsNativeThemeCocoa.mm
@@ -2674,6 +2674,12 @@ void nsNativeThemeCocoa::RenderWidget(const WidgetInfo& aWidgetInfo, DrawTarget&
     // Set it to the appearance we want, to overwrite any state that's still around from earlier
     // paints.
     NSAppearance.currentAppearance = GetAppAppearance();
+
+    // Also set the cell draw window's appearance; this is respected by NSTextFieldCell (and its
+    // subclass NSSearchFieldCell).
+    if (mCellDrawWindow) {
+      mCellDrawWindow.appearance = NSAppearance.currentAppearance;
+    }
   }
 
   const Widget widget = aWidgetInfo.Widget();
